--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: dotnet restore "Vehiculo.Web\Vehiculo.Web.sln"
+        run: dotnet restore "Vehiculo.Web/Vehiculo.Web.sln"
 
       - name: Build with dotnet
         run: |
