--- a/.github/workflows/WEB.yml
+++ b/.github/workflows/WEB.yml
@@ -44,12 +44,11 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: dotnet restore "Vehiculo.Web\Vehiculo.Web.sln"
+        run: dotnet restore "Vehiculo.Web/Vehiculo.Web.sln"
 
       - name: Build with dotnet
         run: |
-          cd "Vehiculo.Web"
-          dotnet build "Abstracciones/Abstracciones.csproj" --configuration Release --no-restore
+          dotnet build "Vehiculo.Web/Abstracciones/Abstracciones.csproj" --configuration Release --no-restore
           dotnet build "Vehiculo.Web/Reglas/Reglas.csproj" --configuration Release --no-restore
           dotnet build "Vehiculo.Web/Web/Web.csproj" --configuration Release --no-restore
 
