--- a/.github/workflows/WEB.yml
+++ b/.github/workflows/WEB.yml
@@ -56,7 +56,7 @@ jobs:
         run: dotnet test "Vehiculo.Web/Vehiculo.Web.sln" --no-restore --verbosity normal --configuration Release || echo "No tests found or test execution failed"
 
       - name: dotnet publish
-        run: dotnet publish "Vehiculo.Web/Web/Web.csproj" -c Release -o ./publish --no-restore
+        run: dotnet publish "Vehiculo.Web/Vehiculo.Web.sln" -c Release -o ./publish --no-restore
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
