--- a/.github/workflows/BD.yml
+++ b/.github/workflows/BD.yml
@@ -12,15 +12,15 @@
 name: vehiculosc701
 
 env:
-  AZURE_SQL_SERVER: tu-servidor.database.windows.net    # Tu servidor SQL de Azure (ejemplo: vehiculo-db-server.database.windows.net)
-  AZURE_SQL_DATABASE: vehiculo-db    # Nombre de tu base de datos
+  AZURE_SQL_SERVER: sc7012026m.database.windows.net    # Tu servidor SQL de Azure (ejemplo: vehiculo-db-server.database.windows.net)
+  AZURE_SQL_DATABASE: vehiculo    # Nombre de tu base de datos
   DACPAC_PATH: 'Vehiculo.API/BD/bin/Release/BD.dacpac'
 
 on:
   push:
     branches: [ "main" ]
     paths:
-      - 'Semana 05-API y WEB/Vehiculo.API/BD/**'
+      - 'Vehiculo.API/BD/**'
   workflow_dispatch:
 
 permissions:
@@ -74,3 +74,4 @@ jobs:
           Write-Host "Target Server: ${{ env.AZURE_SQL_SERVER }}"
           Write-Host "Target Database: ${{ env.AZURE_SQL_DATABASE }}"
         shell: powershell
+
